--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title></title>
+  <meta name="viewport" content="width=device-width">
+  <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico">
+	<title>THIN MINTSSSS CALORIES</title>
 	<link rel="stylesheet" href="./vendor/skeleton/normalize.css">
 	<link rel="stylesheet" href="./vendor/skeleton/skeleton.css">
 	<link rel="stylesheet" href="./style.css">
@@ -18,7 +20,9 @@
 				<button class="four columns offset-by-four" type="submit">CALCULATE</button>
 			</div>
 		</form>
-		<h2 id="results"></h2>
+		<div class="row">
+			<h2 id="results" class="eight columns offset-by-two"></h2>
+		</div>
 	</div>
 	<script src="app.js"></script>
 </body>
